# clash-ranker

./: .gitignore  Dockerfile  clash-ranker.cabal  haskell-on-heroku-tutorial.cabal
src/: Main.hs
