name:          clash-ranker
version:       1.0
build-type:    Simple
cabal-version: >= 1.2

executable clash-ranker
  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      aeson,
                      alex,
                      bytestring,
                      bytestring-lexing,
                      hedis,
                      servant,
                      servant-server,
                      stm,
                      text,
                      transformers,
                      warp
